<resources>
    <string name="app_name">Fortune</string>
    <string name="str_no_internet_connection_available">No internet connection available</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="powered_by_adani_wilmar">Powered by : Adani Wilmar</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="str_forget_pwd">Forgot Password ?</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="str_submit_photo">Submit Photo</string>
    <string name="str_main_image">Main Image</string>
    <string name="str_browse">Browse</string>
    <string name="str_take_image">Take Photo</string>
    <string name="str_upload_photo">Upload Photo</string>
    <string name="str_description">Description</string>
    <string name="str_submit">Submit</string>
    <string name="str_select_store">Select Store</string>


    <string-array name="SelectStore">
            <item>Select Store</item>
            <item>item2</item>
            <item>item3</item>
            <item>item4</item>
        </string-array>

    <string-array name="Selecttitle">
        <item>Select Title</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>

    <string-array name="anyOther">
        <item>Any Other</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>


</resources>
