<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_store_bg"
        android:scaleType="centerCrop"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarLayout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:id="@+id/reltiveHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorBack">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:src="@drawable/img_back"
                android:layout_gravity="center_vertical"
                android:onClick="onClick"
                android:padding="10dp"/>


            <TextView
                android:id="@+id/tv_headerTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:textStyle="bold"
                android:text="@string/str_select_store"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/lin_select_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/drw_rounded_corner"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:layout_below="@+id/appbarLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp">

    <TextView
        android:id="@+id/tv_select_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:padding="10dp"
        android:gravity="center|left"
        android:text="Select Title"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/img_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:src="@drawable/img_dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin_select_any_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/drw_rounded_corner"
        android:onClick="onClick"
        android:orientation="horizontal"
       android:layout_below="@+id/lin_select_title"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tv_any_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:padding="10dp"
            android:gravity="center|left"
            android:text="Any Other"
            android:textColor="@android:color/black"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/img_down1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/img_dropdown"/>

    </LinearLayout>

    <EditText
        android:id="@+id/txv_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:hint="@string/str_description"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="15sp"
        android:gravity="top|left"
        android:padding="10dp"
        android:textColorHint="@android:color/black"
        android:layout_below="@+id/lin_select_any_other"
        android:background="@drawable/drw_rounded_corner"/>

    <Button
        android:id="@+id/btn_submit"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/txv_description"
        android:text="@string/str_submit"
        android:textAllCaps="false" />

    <ImageView
        android:id="@+id/img_f"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_f"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>