<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_store_bg" />

    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/appbarLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:id="@+id/reltiveHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBack"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:onClick="onClick"
                android:padding="10dp"
                android:src="@drawable/img_back" />


            <TextView
                android:id="@+id/tv_headerTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/str_upload_photo"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbarLayout">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linUlodedImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:id="@+id/img_take_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:src="@drawable/pro_14626" />


                <ImageView
                    android:id="@+id/img_take_photo1"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/img_take_photo"
                    android:layout_weight="1"
                    android:src="@drawable/pro_14626" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_main_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linUlodedImage"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drw_ronded_corner_main_image"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/txv_main_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_main_image"
                        android:textColor="@android:color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/btn_take_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="#FCD53B"
                        android:padding="8dp"
                        android:text="@string/str_take_image" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linProgress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/circular_ProgressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="75"
                        android:progressDrawable="@drawable/drw_progressbar" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txv_Photo_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Store Photo 01"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txv_photo_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="27.13 KB"
                            android:textColor="#D4C07A" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:src="@drawable/img_true" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linProgress1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/circular_ProgressBar1"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:gravity="center"
                        android:indeterminate="false"
                        android:max="100"
                        android:progress="75"
                        android:progressDrawable="@drawable/drw_progressbar" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txv_photo_name1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ahemdabad Photo"
                            android:textColor="@android:color/black"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/txv_hoto_size1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="27.13 KB"
                            android:textColor="#D4C07A" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/img_true1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:gravity="center"
                        android:src="@drawable/img_true" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_f"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/img_f" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>